--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO-DO APP</title>
-    <script src="./assets/js/jquery.js"></script>
+    <script src="./jquery.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -21,6 +21,6 @@
             </ul>
         </div>
 
-    <script src="./assets/js/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
